Bug 106638 - FILEOPEN PPTX Arial (Corps) changed to Wingdings
Summary: FILEOPEN PPTX Arial (Corps) changed to Wingdings
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.2.5.1 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords: difficultyBeginner, easyHack, filter:pptx, skillCpp, topicDebug
Depends on:
Blocks: PPTX
  Show dependency treegraph
 
Reported: 2017-03-19 08:14 UTC by Frederic Parrenin
Modified: 2019-12-04 09:57 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
.pptx file to reproduce the problem (1.32 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2017-03-19 08:14 UTC, Frederic Parrenin
Details
comparison MSO 2010 and LibreOffice 5.4 (38.88 KB, image/png)
2017-03-19 11:30 UTC, Xisco Faulí
Details
screenshot of Impress displaying the .pptx file (119.94 KB, image/png)
2017-03-19 13:10 UTC, Frederic Parrenin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Frederic Parrenin 2017-03-19 08:14:36 UTC
Created attachment 132004 [details]
.pptx file to reproduce the problem

Steps to reproduce:
- open the attached pptx file in Impress
- open it also in PowerPoint
- compare
=> the text is composed of symbols in Impress, while it should be latin characters.

I am using LibreOffice 5.2.5.1 on debian linux jessie.
Comment 1 Xisco Faulí 2017-03-19 11:29:54 UTC
I can't reproduce it in

Version: 5.4.0.0.alpha0+
Build ID: d3b5bd4a07a619db6bee1c39c32280ac3c620532
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Could you please try to reproduce it with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the bug is still present in the latest version.
Comment 2 Xisco Faulí 2017-03-19 11:30:23 UTC
Created attachment 132007 [details]
comparison MSO 2010 and LibreOffice 5.4
Comment 3 Frederic Parrenin 2017-03-19 13:10:11 UTC
Created attachment 132011 [details]
screenshot of Impress displaying the .pptx file

The bug also appears in 5.3.1.
I attach a screenshot.
The police used is Wingdings.
Comment 4 m_a_riosv 2017-03-20 01:25:39 UTC
I can reproduce.
Version: 5.4.0.0.alpha0+
Build ID: 96a9b38db5fd9c21bffe4274fa7d5083d4bc2ee9
CPU threads: 4; OS: Windows 6.19; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-03-18_23:07:25
Locale: es-ES (es_ES); Calc: group
Version: 5.3.1.2 (x64)
Build ID: e80a0e0fd1875e1696614d24c32df0f95f03deb2
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; Layout Engine: new; 
Locale: es-ES (es_ES); Calc: group

What is the original font on the pptx?
Comment 5 Frederic Parrenin 2017-03-20 08:54:55 UTC
The original font is: Arial (Corps).
Comment 6 Buovjaga 2017-03-25 19:14:54 UTC
In 5.3/5.4, the character formatting is said to be Wingdings (for me substituted because I don't have the font). In 3.6 it is empty. In 3.3 it is Arial.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.1.2
Build ID: 5.3.1-1
CPU Threads: 8; OS Version: Linux 4.10; UI Render: default; VCL: kde4; Layout Engine: new; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 54f9a81a1c041c18d209d7eb4659ac18a3ca76dd
CPU threads: 8; OS: Linux 4.10; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on March 25th 2016

Arch Linux 64-bit
LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

Arch Linux 64-bit
Version 3.6.7.2 (Build ID: e183d5b)
Comment 7 QA Administrators 2018-10-22 02:48:14 UTC Comment hidden (obsolete)
Comment 8 Frederic Parrenin 2018-10-22 14:02:13 UTC
This bug is still present in 6.1.2.
Comment 9 Buovjaga 2019-09-29 15:51:59 UTC
Still confirmed

Version: 6.4.0.0.alpha0+ (x64)
Build ID: d744838991594eebe27acc4c7d9fb4579d654853
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-09-29_05:12:00
Locale: fi-FI (fi_FI); UI-Language: en-US
Calc: threaded
Comment 10 Mark Hung 2019-10-15 15:56:06 UTC
In attachment 132004 [details] there exist some fragment inside:

            <a:r>
              <a:rPr lang="fr-FR" sz="2000" i="0" dirty="0" smtClean="0">
                <a:solidFill>
                  <a:srgbClr val="FF0000"/>
                </a:solidFill>
                <a:sym typeface="Wingdings"/>
              </a:rPr>
              <a:t>stratégique si la France veut se positionner</a:t>
            </a:r>

Notice from document here: https://docs.microsoft.com/en-us/dotnet/api/documentformat.openxml.drawing.symbolfont?view=openxml-2.8.1

Said that the run of text is rendered using the font specified by a:sym typeface.
Office obvious did not follow that.

Implementation trace back to
commit 3a95d76279984551d2843e89db58a0b2ad1808a7
Author: sj <sj@openoffice.org>
Date:   Tue Oct 12 16:11:23 2010 +0200

    impress202: #i113673# added support of smybol fonts

And from https://docs.microsoft.com/en-us/openspecs/office_standards/ms-oi29500/2fc70eb8-232c-4820-9449-43baa12fe65f
Says nothing about which part of the text should a:sym typeface be applied.
Comment 11 Mark Hung 2019-10-17 12:18:01 UTC
So the problem is that the symbol font is explicitly defined but Latin font is not. Once symbol appears it don't know how to revert font to the previous Latin one.
Comment 12 Commit Notification 2019-11-10 11:33:32 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2971f6bbabe5871e9ef462e94239c652db3aede0

tdf#106638 oox: reset font settings if necessary.

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Buovjaga 2019-12-03 17:09:39 UTC
Mark: your patch seems to fix the problem (tested both Linux and Windows). Is there anything else or would you like to set to FIXED?